<resources>
    <string name="app_name">智能收银</string>
    <string name="title_activity_login">登录</string>

    <string name="rmb">&#165;</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="login">登录</string>
    <string name="home">主界面</string>
    <string name="settign">系统设置</string>
    <string name="count">统计</string>
    <string name="open">营业</string>
    <string name="operate">运营</string>
    <string name="entry_orders">挂单</string>
    <string name="pop_number">人数</string>
    <string name="water_resource">流水</string>
    <string name="combined">并单</string>
    <string name="single_elimination">消单</string>
    <string name="paid_in">实收</string>
    <string name="change">找零</string>
    <string name="fix_price">固价</string>
    <string name="default_notify">准备下单</string>
    <!--支付方式-->
    <string name="pay_cash">现金支付</string>
    <string name="pay_scan_code">扫码支付</string>
    <string name="pay_nfc_card">刷卡支付</string>

    <string name="server_config">服务器配置</string>
    <string name="machine_config">机器配置</string>
    <string name="system_config">系统配置</string>
    <string name="database_config">数据库配置</string>

    <string name="payment_name">姓名</string>
    <string name="startTime">开始时间</string>
    <string name="stopTime">结束时间</string>
    <string name="shopAssistant">营业员:</string>
    <string name="search">查找</string>
    <string name="print">打印</string>
    <string name="print_all">打印全部</string>
    <string name="meal_times">餐次</string>
    <string name="payment_method">结账方式</string>
    <string name="time">时间</string>
    <string name="order_number">订单号</string>
    <string name="numder">数量</string>
    <string name="order_amount">订单金额</string>
    <string name="cashier">收银员</string>
    <string name="pay_type">支付状态</string>
    <string name="product_name">商品名称</string>
    <string name="total_sales_volume">销售总量</string>
    <string name="unit_price">单价</string>
    <string name="total_sales">销售总额</string>
    <string name="date">日期</string>
    <string name="non_payment">未支付|金额</string>
    <string name="money">金额</string>
    <string name="export_all">导出全部</string>

    <string name="machine_expire">为保障系统正常使用、请及时激活。截止日期：</string>
    <string name="machine_activate">激活码：( 请联系深圳市科拜斯有限公司 )</string>
    <string name="activate">激活</string>

    <string name="company">深圳市科拜斯物联网科技有限公司 400-1680881</string>
    <string name="TransactionType1">&quot;HDX-PT95-CUT-945.bin&quot;</string>
    <string name="TransactionType2">&quot;HDX-PT95-CUT-946.bin&quot;</string>
    <string name="TransactionType3">&quot;HDX-PT95-LP-945.bin&quot;</string>
    <string name="TransactionType4">&quot;HDX-PT95-LP-946.bin&quot;</string>

    <string name="itpw">              正在更新固件......</string>
    <string name="itpw2">              正在更新字体库......</string>
    <string name="Determine">"OK"</string>
    <string name="cancel">"取消"</string>
    <string name="UpdateFWWarn">"警告: 选择的版本是低于或等于当前版本"</string>

    <string name="receipt_no">小票编号：</string>
    <string name="device_no">设备号：</string>
    <string name="operator">操作员：</string>
    <string name="order_date">日期：</string>
    <string name="dish_name">品名</string>
    <string name="number">数量</string>
    <string name="total_quantity">总数量：</string>
    <string name="total_money">总金额：</string>
    <string name="pay_method">支付方式：</string>
    <string name="balance">余额：</string>
    <string name="remark">备注：</string>
    <string name="discount">折扣：</string>
    <string name="address">地址：</string>


    <string name="CharDemo">"打印字符测试"</string>
    <string name="CodeDemo">"打印二维码测试"  </string>
    <string name="ImageDemo">"打印图像测试" </string>
    <string name="GetVersion">"获取固件版本" </string>
    <string name="UpdateVersion">"更新固件" </string>
    <string name="UpdateFontLib">"更新字体库" </string>
    <string name="WarningTimeIsLong">"更新字体库需要大约6分钟!" </string>

    <string name="quit">"退出" </string>

    <string name="previousFWV"> "更新前的固件版本 :" </string>
    <string name="currentFWV"> "当前固件版本 :" </string>

    <string name="updateFWFinish">"更新固件完成"</string>

    <string name="selectFW">"选择固件文件"</string>

    <string name="appName">"打印控制程序"</string>


    <string name="getV"> "获取固件版本" </string>


    <string name="hello">Hello World,  FileExplorer!</string>

    <string-array name="language">
        <item>"美国    "</item>
        <item>"法国    "</item>
        <item>"德国    "</item>
        <item>"英国    "</item>
        <item>"丹麦I   "</item>
        <item>"瑞典    "</item>
        <item>"意大利  "</item>
        <item>"西班牙I "</item>
        <item>"日本    "</item>
        <item>"挪威    "</item>
        <item>"丹麦II  "</item>
        <item>"西班牙II"</item>
        <item>"拉丁美洲"</item>
        <item>"韩国    "</item>
        <item>"斯洛维尼亚/克罗帝亚"</item>
        <item>"简体中文"</item>
    </string-array>

    <string name="CurrentLanguageis"> "当前打印机使用的语言是 :" </string>
    <string name="IsOutOfPaper"> "打印机缺纸或者纸没有装好" </string>
    <string name="HavePaper"> "打印机有纸" </string>
    <string name="itpw3">              正在获取打印机信息......</string>
    <string name="itpw4">              "更新字库完成 "</string>
    <string name="PrinterNotNormal1"> "打印机温度太高" </string>
    <string name="format_24_hour">yyyy-MM-dd kk:mm:ss </string>
    <string name="title_activity_operation">OperationActivity</string>

</resources>
