<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_10">

        <TextView
            android:id="@+id/tx_statistics_detail_date"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/time"/>

        <TextView
            android:id="@+id/tx_statistics_detail_order_num"
            android:layout_weight="1.5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/order_number"/>

        <TextView
            android:id="@+id/tx_statistics_detail_number"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/numder"/>

        <TextView
            android:id="@+id/tx_statistics_detail_order_amount"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/order_amount"/>

        <TextView
            android:id="@+id/tx_statistics_detail_pay_method"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/payment_method"/>

        <TextView
            android:id="@+id/tx_statistics_detail_cashier"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:singleLine="true"
            android:ellipsize="end"
            android:text="@string/pay_type"/>
</LinearLayout>