<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_20" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receipt_no"
        android:layout_marginTop="@dimen/margin_10"/>
    <TextView
        android:id="@+id/tx_recepit_order_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="123"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="总店"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_15">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/device_no"/>

        <TextView
            android:id="@+id/tx_recepit_device_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/operator"/>

        <TextView
            android:id="@+id/tx_recepit_operator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_date"/>

        <TextView
            android:id="@+id/tx_receipt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dish_name"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:gravity="right"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/unit_price"
            android:gravity="right"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/money"
            android:gravity="right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:background="@drawable/bg_dotted_line"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_recepit_print_preview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="@dimen/margin_5"
        android:layout_marginBottom="@dimen/margin_5"
        android:background="@drawable/bg_dotted_line"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5">

        <TextView
            android:id="@+id/text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_quantity"/>

        <TextView
            android:id="@+id/tx_recepit_total_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/text_view_1"/>

        <TextView
            android:id="@+id/text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_money"
            app:layout_constraintTop_toBottomOf="@id/text_view_1"/>

        <TextView
            android:id="@+id/tx_recepit_total_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_1"
            app:layout_constraintLeft_toRightOf="@id/text_view_2"/>

        <TextView
            android:id="@+id/text_view_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_method"
            app:layout_constraintTop_toBottomOf="@id/text_view_2"/>

        <TextView
            android:id="@+id/tx_recepit_pay_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_2"
            app:layout_constraintLeft_toRightOf="@id/text_view_3"/>

        <TextView
            android:id="@+id/text_view_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/balance"
            app:layout_constraintTop_toBottomOf="@id/text_view_3"/>

        <TextView
            android:id="@+id/tx_recepit_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_3"
            app:layout_constraintLeft_toRightOf="@id/text_view_4"/>

        <TextView
            android:id="@+id/text_view_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remark"
            app:layout_constraintTop_toBottomOf="@id/text_view_4"/>

        <TextView
            android:id="@+id/tx_recepit_remark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_4"
            app:layout_constraintLeft_toRightOf="@id/text_view_5"/>

        <TextView
            android:id="@+id/text_view_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discount"
            app:layout_constraintTop_toBottomOf="@id/text_view_5"/>

        <TextView
            android:id="@+id/tx_recepit_discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_5"
            app:layout_constraintLeft_toRightOf="@id/text_view_6"/>

        <TextView
            android:id="@+id/text_view_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:layout_constraintTop_toBottomOf="@id/text_view_6"/>

        <TextView
            android:id="@+id/tx_recepit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/text_view_6"
            app:layout_constraintLeft_toRightOf="@id/text_view_7"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>